2nd rewrite >.<